--- a/index.html
+++ b/index.html
@@ -1,24 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hackathon</title>
     <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+
+
+
+    <body>
+        <!-- ? start navbar-->
+        <nav class="navbar bg-light color:cyan-700">
+            <div class="container-fluid">
+                <a class="navbar-brand">Navbar</a>
+                <form class="d-flex" role="search">
+                    <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+
+        <div class="add-btn w-100 d-flex justify-content-center">
+            <button type="button" class="btn btn-info w-25 m-4">
+        Добавить контакт
+      </button>
+        </div>
+        <div class="container">
+            <div class="
+          w-100
+          d-flex
+          flex-column
+          justify-content-center
+          align-items-center
+          dk
+          pb-4
+        ">
+                <h2>новый контакт</h2>
+                <input type="text" id="name" placeholder="Name" class="form-control mb-2 w-50" />
+                <input type="text" id="surname" placeholder="Surname" class="form-control mb-2 w-50" />
+                <input type="text" id="descr" placeholder="Description" class="form-control mb-2 w-50" />
+                <input type="tel" id="number" placeholder="Phone Number" class="form-control mb-2 w-50" />
+                <button class="btn btn-info w-50" id="btn-add">добавить</button>
+            </div>
+        </div>
+
+        <div class="container">
+            <div id="contact-list" class="d-flex justify-content-evenly m-5 flex-wrap align-items-stretch"></div>
+        </div>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="
+                w-100
+                d-flex
+                flex-column
+                justify-content-center
+                align-items-center
+              ">
+                            <h2></h2>
+                            <input type="text" id="edit-name" placeholder="name" class="form-control mb-2" />
+                            <input type="text" id="edit-surname" placeholder="surname" class="form-control mb-2" />
+                            <input type="text" id="edit-descr" placeholder="description" class="form-control mb-2" />
+                            <input type="text" id="edit-number" placeholder="Phhone number" class="form-control mb-2" />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+              Close
+            </button>
+                        <button type="button" class="btn btn-primary" id="btn-save-edit">
+              Save changes
+            </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item prev">
+                    <a class="page-link" href="#">назад</a>
+                </li>
+
+                <div class="pagination-list d-flex"></div>
+                <li class="page-item next">
+                    <a class="page-link" href="#">далее</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    </body>
+
 </html>
